Fix Salon Hours alignment on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -220,7 +220,6 @@ color:#FFFFFF;
   padding: 20px 10px;
   font-size: 16px;
   line-height: 17px;
-  /*color:#fff;*/
   color: #6C6865;
 }
 
@@ -484,7 +483,7 @@ BRAID
   margin: 0;
   position: relative;
   background-position: center center;
-  height: 100%;
+  height: 200%;
   width: 100%;
 
     -webkit-background-size: 100%;
@@ -531,13 +530,38 @@ BRAID
 /*==========================================
     MEDIA QURIES
 =====================================================*/
-/*Testing to fix dropdown on ipad*/
-@media (max-width: 848px){
-  .collapse .navbar-collapse 
+@media (max-width: 500px) {
+  .navbar-default .navbar-brand {
+    font-size: 28px;
   }
 }
 
 
+/*Testing to fix dropdown on ipad*/
+@media (max-width: 848px) {
+  .collapse .navbar-collapse {
+
+  } 
+}
+
+@media (max-width: 768px) {
+  #map img {
+    height: 200px;
+  }
+}
+
+/*Contact Us*/
+@media (min-width: 768px) {
+  #hours .col-sm-12 {
+  position: relative;
+  min-height: 1px;
+  padding-right: 0;
+  padding-left: 0;
+  }
+}
+
+
+/*ON Template */
 @media (max-width: 847px) {
     .flot-nav {
     float:left;
